[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/menu/Label3.gd" type="Script" id=1]
[ext_resource path="res://scenes/menu/Label2.gd" type="Script" id=2]
[ext_resource path="res://scenes/menu/Label0.gd" type="Script" id=3]
[ext_resource path="res://scenes/menu/Label1.gd" type="Script" id=4]
[ext_resource path="res://scenes/menu/naming.gd" type="Script" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/BaroqueTextJF.ttf"

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = SubResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 1024.0
color = Color( 0, 0, 0, 1 )

[node name="Hrát" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -466.0
margin_top = 232.0
margin_right = 466.0
margin_bottom = 326.0
custom_fonts/font = SubResource( 2 )
text = "Stiskni pravý button pro návrat"

[node name="Spaseno" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -157.5
margin_top = 288.0
margin_right = 157.5
margin_bottom = 382.0
rect_pivot_offset = Vector2( 157.5, 47 )
custom_fonts/font = SubResource( 2 )
text = "Spaseno:"
align = 1
autowrap = true

[node name="Label3" type="Label" parent="."]
margin_left = 720.0
margin_top = 576.0
margin_right = 800.0
margin_bottom = 696.0
custom_fonts/font = SubResource( 2 )
text = "3"
align = 1
autowrap = true
script = ExtResource( 1 )

[node name="Label2" type="Label" parent="."]
margin_left = 640.0
margin_top = 576.0
margin_right = 720.0
margin_bottom = 696.0
custom_fonts/font = SubResource( 2 )
text = "2"
align = 1
autowrap = true
script = ExtResource( 2 )

[node name="Label1" type="Label" parent="."]
margin_left = 560.0
margin_top = 576.0
margin_right = 640.0
margin_bottom = 696.0
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1
autowrap = true
script = ExtResource( 4 )

[node name="Label0" type="Label" parent="."]
margin_left = 480.0
margin_top = 576.0
margin_right = 560.0
margin_bottom = 696.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
autowrap = true
script = ExtResource( 3 )
